--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,7 @@
           <StackPanel Orientation="Horizontal">
             <TextBlock Text="{Binding ShortName}" Width="120"/>
             <TextBlock Text="{Binding Date}" Width="80"/>
+            <TextBlock Text="{Binding Path}" Width="30"/>
             <TextBlock Text="{Binding Size}" Width="50" TextAlignment="Right"/>
             <CheckBox IsChecked="{Binding Mounted}" Margin="10,2,2,2"/>
           </StackPanel>
